--- a/contacts.html
+++ b/contacts.html
@@ -4,15 +4,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Оставить заявку</title>
 </head>
 
 <body>
-	<a href="index.html">Главная</a>
-	<a href="catalog/catalog.html">Обо мне</a>
-	<a href="contacts.html">Оставить заявку</a>
+	<a class="header__link" href="index.html">Главная</a>
+	<a class="header__link" href="catalog/catalog.html">Обо мне</a>
+	<a class="header__link" href="contacts.html">Оставить заявку</a>
 
-	<h1>Оставить заявку</h1>
+	<h1 class="header__title">Оставить заявку</h1>
 
 	<form action="#">
 		Ваше Имя <input type="text" placeholder="Введите ваше имя"><br>
