--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>MMS</title>
 </head>
 
 <body>
-	<a href="index.html">Главная</a>
-	<a href="catalog/catalog.html">Обо мне</a>
-	<a href="contacts.html">Оставить заявку</a>
+	<a class="header__link" href="index.html">Главная</a>
+	<a class="header__link" href="catalog/catalog.html">Обо мне</a>
+	<a class="header__link" href="contacts.html">Оставить заявку</a>
 
-	<h1>Главная страница</h1>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officiis!</p>
-	<h2>Добро пожаловать на сайт</h2>
-	<p>Lorem ipsum dolor sit amet.</p>
-	<p>Lorem ipsum dolor sit amet.</p>
-	<p>Lorem ipsum dolor sit amet.</p>
+	<h1 class="header__title">Главная страница</h1>
+	<p class="content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officiis!</p>
+	<h2 class="header__subtitle">Добро пожаловать на сайт</h2>
+	<p class="content-text">Lorem ipsum dolor sit amet.</p>
+	<p class="content-text">Lorem ipsum dolor sit amet.</p>
+	<p class="content-text">Lorem ipsum dolor sit amet.</p>
 	<a href="https://vk.com/"><img src="img/vk.svg" alt="social" width="30px"></a>
 	<a href="https://www.youtube.com/"><img src="img/youtube.svg" alt="social" width="30px"></a>
 
