--- a/index.html
+++ b/index.html
@@ -4,23 +4,87 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<title>MMS</title>
+	<link rel="stylesheet" href="css/main.css">
+	<title>GrowBe</title>
 </head>
 
 <body>
-	<a class="header__link" href="index.html">Главная</a>
-	<a class="header__link" href="catalog/catalog.html">Обо мне</a>
-	<a class="header__link" href="contacts.html">Оставить заявку</a>
 
-	<h1 class="header__title">Главная страница</h1>
-	<p class="content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officiis!</p>
-	<h2 class="header__subtitle">Добро пожаловать на сайт</h2>
-	<p class="content-text">Lorem ipsum dolor sit amet.</p>
-	<p class="content-text">Lorem ipsum dolor sit amet.</p>
-	<p class="content-text">Lorem ipsum dolor sit amet.</p>
-	<a href="https://vk.com/"><img src="img/vk.svg" alt="social" width="30px"></a>
-	<a href="https://www.youtube.com/"><img src="img/youtube.svg" alt="social" width="30px"></a>
+	<div class="wrapper">
+		<header>
+			<div class="container">
+				<div class="header">
+					<div class="header__left">
+						<img src="img/header/logo.svg" alt="logo">
+						<h5>Grow<span>Be</span></h5>
+					</div>
+					<div class="header__link">
+						<ul>
+							<a href="#">
+								<li><span>Home</span></li>
+							</a>
+							<a href="#">
+								<li>About Us</li>
+							</a>
+							<a href="#">
+								<li>Services</li>
+							</a>
+							<details>
+								<summary>Features</summary>
+								<ul>
+									<a href="#">
+										<li>new link</li>
+									</a>
+									<a href="#">
+										<li>new link</li>
+									</a>
+									<a href="#">
+										<li>new link</li>
+									</a>
+								</ul>
+							</details>
+							<a href="#">
+								<li>Team</li>
+							</a>
+							<a href="#">
+								<li>Blog</li>
+							</a>
+							<a href="#">
+								<li>Contact</li>
+							</a>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</header>
+		<main>
+			<section class="SEO">
+				<div class="container">
+					<div class="seo__info">
+						<div class="seo__left">
+							<h1>SEO & Digital
+								Marketing For Your
+								Website.</h1>
+							<p>Provide all kind of seo services and help to improve
+								seo ranking. Globally incubate standards.</p>
+							<div class="button">
+								<a href="#">Start Now</a>
+								<a href="">Watch Video</a>
+							</div>
+						</div>
+					</div>
+					<div class="seo__logo">
+						<img src="img/header/1.svg" alt="logo">
+						<img src="img/header/2.svg" alt="logo">
+						<img src="img/header/3.svg" alt="logo">
+						<img src="img/header/4.svg" alt="logo">
+						<img src="img/header/5.svg" alt="logo">
+						<img src="img/header/6.svg" alt="logo">
+					</div>
+				</div>
+			</section>
+		</main>
+	</div>
 
 
 </body>
