--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 				<div class="header">
 					<div class="header__left">
 						<img src="img/header/logo.svg" alt="logo">
-						<h5>Grow<span>Be</span></h5>
+						<h5>Grow<span class="span-h5">Be</span></h5>
 					</div>
 					<div class="header__link">
 						<ul>
 							<a href="#">
-								<li><span>Home</span></li>
+								<li><span class="span-link">Home</span></li>
 							</a>
 							<a href="#">
 								<li>About Us</li>
@@ -68,9 +68,12 @@
 							<p>Provide all kind of seo services and help to improve
 								seo ranking. Globally incubate standards.</p>
 							<div class="button">
-								<a href="#">Start Now</a>
-								<a href="">Watch Video</a>
+								<a class="btn-color" href="#">Start Now</a>
+								<a class="btn" href="#">Watch Video</a>
 							</div>
+						</div>
+						<div class="seo__right">
+							<img class="img-header" src="img/header/pngfind 1.svg" alt="image">
 						</div>
 					</div>
 					<div class="seo__logo">
