переделал на синий макет

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Montserrat&family=Open+Sans:ital,wght@0,500;0,600;0,700;0,800;1,500;1,600;1,700;1,800&family=Roboto:wght@300&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 	<title>GrowBe</title>
 </head>
@@ -13,79 +18,39 @@
 	<div class="wrapper">
 		<header>
 			<div class="container">
-				<div class="header">
-					<div class="header__left">
-						<img src="img/header/logo.svg" alt="logo">
-						<h5>Grow<span class="span-h5">Be</span></h5>
-					</div>
-					<div class="header__link">
-						<ul>
-							<a href="#">
-								<li><span class="span-link">Home</span></li>
-							</a>
-							<a href="#">
-								<li>About Us</li>
-							</a>
-							<a href="#">
-								<li>Services</li>
-							</a>
-							<details>
-								<summary>Features</summary>
-								<ul>
-									<a href="#">
-										<li>new link</li>
-									</a>
-									<a href="#">
-										<li>new link</li>
-									</a>
-									<a href="#">
-										<li>new link</li>
-									</a>
-								</ul>
-							</details>
-							<a href="#">
-								<li>Team</li>
-							</a>
-							<a href="#">
-								<li>Blog</li>
-							</a>
-							<a href="#">
-								<li>Contact</li>
-							</a>
-						</ul>
-					</div>
-				</div>
+				<nav class="header__nav">
+					<a class="header__nav-link" href="#">Home</a>
+					<a class="header__nav-link" href="#">About</a>
+					<a class="header__nav-link" href="#">Services</a>
+					<a class="header__nav-link" href="#">Blog</a>
+					<a class="header__nav-link" href="#">Contact</a>
+				</nav>
 			</div>
 		</header>
 		<main>
-			<section class="SEO">
-				<div class="container">
-					<div class="seo__info">
-						<div class="seo__left">
-							<h1>SEO & Digital
-								Marketing For Your
-								Website.</h1>
-							<p>Provide all kind of seo services and help to improve
-								seo ranking. Globally incubate standards.</p>
-							<div class="button">
-								<a class="btn-color" href="#">Start Now</a>
-								<a class="btn" href="#">Watch Video</a>
-							</div>
-						</div>
-						<div class="seo__right">
-							<img class="img-header" src="img/header/pngfind 1.svg" alt="image">
+			<div class="container">
+				<div class="artificial__info">
+					<div class="artificial__left">
+						<h6>Next genaretion platform</h6>
+						<h1>Artificial intelligence & Syber security</h1>
+						<p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries
+							for previewing layouts and visual mockups.</p>
+						<div class="button">
+							<a href="#">Start Now</a>
+							<a href="#">Watch Video</a>
 						</div>
 					</div>
-					<div class="seo__logo">
-						<img src="img/header/1.svg" alt="logo">
-						<img src="img/header/2.svg" alt="logo">
-						<img src="img/header/3.svg" alt="logo">
-						<img src="img/header/4.svg" alt="logo">
-						<img src="img/header/5.svg" alt="logo">
-						<img src="img/header/6.svg" alt="logo">
+					<div class="artificial__right">
+						<img class="right-img" src="img/header/main.svg" alt="image">
 					</div>
 				</div>
-			</section>
+				<div class="artificial__logo">
+					<img src="img/header/1.svg" alt="logo">
+					<img src="img/header/2.svg" alt="logo">
+					<img src="img/header/3.svg" alt="logo">
+					<img src="img/header/4.svg" alt="logo">
+				</div>
+			</div>
 		</main>
 	</div>
 
