--- a/index.html
+++ b/index.html
@@ -15,44 +15,47 @@
 
 <body>
 
-	<div class="wrapper">
-		<header>
-			<div class="container">
-				<nav class="header__nav">
-					<a class="header__nav-link" href="#">Home</a>
-					<a class="header__nav-link" href="#">About</a>
-					<a class="header__nav-link" href="#">Services</a>
-					<a class="header__nav-link" href="#">Blog</a>
-					<a class="header__nav-link" href="#">Contact</a>
-				</nav>
-			</div>
-		</header>
-		<main>
-			<div class="container">
-				<div class="artificial__info">
-					<div class="artificial__left">
-						<h6>Next genaretion platform</h6>
-						<h1>Artificial intelligence & Syber security</h1>
-						<p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries
-							for previewing layouts and visual mockups.</p>
-						<div class="button">
-							<a href="#">Start Now</a>
-							<a href="#">Watch Video</a>
-						</div>
-					</div>
-					<div class="artificial__right">
-						<img class="right-img" src="img/header/main.svg" alt="image">
+	<header>
+		<div class="container">
+			<nav class="header__nav">
+				<a class="header__nav-link" href="#">Home</a>
+				<a class="header__nav-link" href="#">About</a>
+				<a class="header__nav-link" href="#">Services</a>
+				<a class="header__nav-link" href="#">Blog</a>
+				<a class="header__nav-link" href="#">Contact</a>
+			</nav>
+		</div>
+	</header>
+
+
+	<main>
+		<div class="container">
+			<div class="artificial__info">
+				<div class="artificial__left">
+					<h6>Next genaretion platform</h6>
+					<h1>Artificial intelligence & Syber security</h1>
+					<p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries
+						for previewing layouts and visual mockups.</p>
+					<div class="button">
+						<a href="#">Start Now</a>
+						<a class="link-flex" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="25"
+								viewBox="0 0 20 25" fill="none">
+								<path d="M20 12.5L0.500001 24.1913L0.500002 0.808657L20 12.5Z" fill="white" />
+							</svg>Watch Video</a>
 					</div>
 				</div>
-				<div class="artificial__logo">
-					<img src="img/header/1.svg" alt="logo">
-					<img src="img/header/2.svg" alt="logo">
-					<img src="img/header/3.svg" alt="logo">
-					<img src="img/header/4.svg" alt="logo">
+				<div class="artificial__right">
+					<img class="right-img" src="img/header/main.svg" alt="image">
 				</div>
 			</div>
-		</main>
-	</div>
+			<div class="artificial__logo">
+				<img src="img/header/1.svg" alt="logo">
+				<img src="img/header/2.svg" alt="logo">
+				<img src="img/header/3.svg" alt="logo">
+				<img src="img/header/4.svg" alt="logo">
+			</div>
+		</div>
+	</main>
 
 
 </body>
