--- a/index.html
+++ b/index.html
@@ -56,8 +56,122 @@
 			</div>
 		</div>
 	</main>
+	<section>
+		<div class="container">
+			<div class="apply">
+				<div class="apply__left">
+					<img src="img/content/about 4.svg" alt="image">
+				</div>
+				<div class="apply_right">
+					<h4>Apply AI, Deep Learning and Data Sciece to solve</h4>
+					<p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for
+						previewing layouts and visual mockups.</p>
+					<div class="apply-btn">
+						<a href="#">Learn More</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="items">
+				<div class="item">
+					<img src="img/content/11.svg" alt="image">
+					<h6>Expert Prespective Agency Awards</h6>
+					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+						layouts and visual mockups.</p>
+				</div>
+				<div class="item">
+					<img src="img/content/22.svg" alt="image">
+					<h6>Business Prespective Global Agency Awards</h6>
+					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+						layouts and visual mockups.</p>
+				</div>
+				<div class="item">
+					<img src="img/content/33.svg" alt="image">
+					<h6>Value for Results in Global Agency Awards</h6>
+					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+						layouts and visual mockups.</p>
+				</div>
+				<div class="item item-big">
+					<img src="img/content/44.svg" alt="image">
+					<h6>In print, and publishing industries for previewing layouts and visual mockups.</h6>
+					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+						layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing
+						industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in
+						print, and publishing industries for previewing layouts and visual mockups.</p>
+				</div>
+				<div class="item">
+					<img src="img/content/55.svg" alt="image">
+					<h6>Value for Results in Global Agency Awards</h6>
+					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+						layouts and visual mockups.</p>
+				</div>
+				<div class="item">
+					<img src="img/content/66.svg" alt="image">
+					<h6>Value for Results in Global Agency Awards</h6>
+					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+						layouts and visual mockups.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="what">
+				<div class="what__left">
+					<h4>What our clients say about our awesome solutions</h4>
+					<p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain
+						some advantage from it who do not know.</p>
+					<p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing .</p>
+					<p>Lorem ipsum is placeholder previewing layouts and visual mockups.</p>
+					<p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for
+						previewing layouts and visual mockups.</p>
+				</div>
+				<div class="what__right">
+					<img src="img/content/about3 1.svg" alt="image">
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__info">
+				<div class="footer__left">
+					<p class="footer-bigtext">INFORMATION</p>
+					<div class="left-list">
+						<img src="img/footer/Group 72.svg" alt="icon">
+						<p>Company@gmail.com.com</p>
+					</div>
+					<div class="left-list">
+						<img src="img/footer/Group 71.svg" alt="icon">
+						<p>Phone: (064) 332-1233</p>
+					</div>
+					<div class="left-list">
+						<img src="img/footer/Group 71 (1).svg" alt="icon">
+						<p>450 Wall Street, USA, New York</p>
+					</div>
 
-
+				</div>
+				<div class="footer__mid">
+					<p class="footer-bigtext">ABOUT THE STORE</p>
+					<p class="opacity">Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and
+						visual mockups.
+					</p>
+				</div>
+				<div class="footer__right">
+					<p class="footer-bigtext">ABOUT THE STORE</p>
+					<p>www.company.com</p>
+					<div class="icons">
+						<img src="img/footer/Vector.svg" alt="icon">
+						<img src="img/footer/Group 82.svg" alt="icon">
+						<img src="img/footer/Group 80.svg" alt="icon">
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
