--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 	<header>
-		<div class="container">
+		<div class="container center ">
 			<nav class="header__nav">
 				<a class="header__nav-link" href="#">Home</a>
 				<a class="header__nav-link" href="#">About</a>
@@ -27,9 +27,8 @@
 		</div>
 	</header>
 
-
 	<main>
-		<div class="container">
+		<div class="container center ">
 			<div class="artificial__info">
 				<div class="artificial__left">
 					<h6>Next genaretion platform</h6>
@@ -56,8 +55,9 @@
 			</div>
 		</div>
 	</main>
+
 	<section>
-		<div class="container">
+		<div class="container center">
 			<div class="apply">
 				<div class="apply__left">
 					<img src="img/content/about 4.svg" alt="image">
@@ -73,8 +73,9 @@
 			</div>
 		</div>
 	</section>
+
 	<section>
-		<div class="container">
+		<div class="container center">
 			<div class="items">
 				<div class="item">
 					<img src="img/content/11.svg" alt="image">
@@ -94,7 +95,7 @@
 					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
 						layouts and visual mockups.</p>
 				</div>
-				<div class="item item-big">
+				<div class="item item-big item-none">
 					<img src="img/content/44.svg" alt="image">
 					<h6>In print, and publishing industries for previewing layouts and visual mockups.</h6>
 					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
@@ -102,13 +103,13 @@
 						industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in
 						print, and publishing industries for previewing layouts and visual mockups.</p>
 				</div>
-				<div class="item">
+				<div class="item item-none">
 					<img src="img/content/55.svg" alt="image">
 					<h6>Value for Results in Global Agency Awards</h6>
 					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
 						layouts and visual mockups.</p>
 				</div>
-				<div class="item">
+				<div class="item item-none">
 					<img src="img/content/66.svg" alt="image">
 					<h6>Value for Results in Global Agency Awards</h6>
 					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
@@ -117,8 +118,9 @@
 			</div>
 		</div>
 	</section>
+
 	<section>
-		<div class="container">
+		<div class="container center">
 			<div class="what">
 				<div class="what__left">
 					<h4>What our clients say about our awesome solutions</h4>
@@ -135,8 +137,9 @@
 			</div>
 		</div>
 	</section>
+
 	<footer class="footer">
-		<div class="container">
+		<div class="container center">
 			<div class="footer__info">
 				<div class="footer__left">
 					<p class="footer-bigtext">INFORMATION</p>
@@ -159,6 +162,22 @@
 					<p class="opacity">Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and
 						visual mockups.
 					</p>
+				</div>
+				<div class="footer__left footer-none">
+					<p class="footer-bigtext">INFORMATION</p>
+					<div class="left-list">
+						<img src="img/footer/Group 72.svg" alt="icon">
+						<p>Company@gmail.com.com</p>
+					</div>
+					<div class="left-list">
+						<img src="img/footer/Group 71.svg" alt="icon">
+						<p>Phone: (064) 332-1233</p>
+					</div>
+					<div class="left-list">
+						<img src="img/footer/Group 71 (1).svg" alt="icon">
+						<p>450 Wall Street, USA, New York</p>
+					</div>
+
 				</div>
 				<div class="footer__right">
 					<p class="footer-bigtext">ABOUT THE STORE</p>
